<resources>
    <string name="app_name">GitHub Mobile</string>
    <string name="help_label">Enter the GitHub profile name</string>
    <string name="search_button">Search</string>

    <string name="user_name">Username: </string>
    <string name="email_text">Email: </string>
    <string name="followers_text">Followers: </string>
    <string name="following_text">Following: </string>
    <string name="gist_text">Gists: </string>
    <string name="repos_text">Repos: </string>

    <string name="alternative">Not setted</string>

    //Search Act
    <string name="no_internet_tittle">Connection Problem</string>
    <string name="no_internet_message">No internet connection found</string>
    <string name="no_internet_ok">Try again!</string>
    <string name="no_internet_cancel">Cancel</string>

    <string name="no_user_tittle">Problem</string>
    <string name="no_user_message">Such user not found!</string>
    <string name="no_user_ok">Close</string>

    <string name="db_tittle">Notice</string>
    <string name="db_message">We found this user in database</string>
    <string name="db_download">Update</string>
    <string name="db_open">Open</string>

    <string name="user_save">User saved</string>
    <string name="edit_hint">Username</string>
    <string name="repos_list_label">Repositories list</string>

    //Settings
    <string name="browser">Open in browser</string>
    <string name="save">Save</string>
    <string name="share">Share</string>
    <string name="show_repo">Show saved</string>

    <string name="share_tittle">Google Plus</string>
    <string name="share_message">Type your message</string>
    <string name="share_hint">Message</string>
    <string name="share_ok">Share</string>
    <string name="share_cancel">Cancel</string>

    <string name="saving_alert">Cannot save without connection</string>

    <string name="saved_users">Saved users</string>
</resources>
